<?xml version="1.0" encoding="utf-8"?>

<!--Thời Khóa Biểu-->
<!--Thời Khóa Biểu-->
<!--Thời Khóa Biểu-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/week_of_term_bg"
    android:padding="15dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mp_rv_week_of_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mp_check_box_select_all" />

    <Button
        android:id="@+id/mp_btn_cancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mp_btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/yes"
        android:textSize="18sp"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/mp_btn_cancel" />

    <TextView
        android:id="@+id/mp_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_week_of_term"
        android:textStyle="bold"
        android:textColor="@color/header_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/mp_btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/mp_btn_yes"
        app:layout_constraintStart_toEndOf="@+id/mp_btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/mp_btn_cancel" />

    <CheckBox
        android:id="@+id/mp_check_box_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_all"
        android:textStyle="bold"
        android:textColor="@color/header_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mp_btn_cancel" />

    <CheckBox
        android:id="@+id/mp_check_box_single_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/single_week"
        android:textStyle="bold"
        android:textColor="@color/header_text_color"
        app:layout_constraintStart_toEndOf="@+id/mp_check_box_select_all"
        app:layout_constraintTop_toTopOf="@+id/mp_check_box_select_all" />

    <CheckBox
        android:id="@+id/mp_check_box_double_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textColor="@color/header_text_color"
        android:text="@string/double_week"
        app:layout_constraintStart_toEndOf="@+id/mp_check_box_single_week"
        app:layout_constraintTop_toTopOf="@+id/mp_check_box_select_all" />

</androidx.constraintlayout.widget.ConstraintLayout>